# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  clippy.toml  configuration.yaml
configuration/: base.yaml  local.yaml  production.yaml
notes/: credentials.md  docker.md  english.md  external-api.md  funny.md  git.md  patterns.md  patterns.txt  testing.txt  todo.md  type-driven.md
proptest-regressions/domain/: subscriber_email.txt
scripts/: init_db.sh  setup-dev-env.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
