[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", default-features = false, features = ["v4"] }
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.226", default-features = false, features = ["derive"] }
config = { version = "0.15.16", default-features = false, features = ["yaml"] }
tracing = { version = "0.1.41", default-features = false }
actix-web = { version = "4.11.0", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["registry", "env-filter"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono" ] }

[dev-dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls","macros", "postgres","uuid","chrono", "migrate" ] }

[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[profile.dev]
panic = "unwind"

[profile.release]
lto = "thin"
panic = "unwind"
